# DomiKnowS

./: .env  .gitattributes  .gitignore  .gitmodules  Agent.md  DevelopBranchREADME.md  FAQ.md  Getting Started.md  GurobiREADME.md  Install DomiKnows.md  Issue Report.md  IssueReport.md  Licence.md  OVERVIEW_USER.md  PIPELINE.md  Pull Request.md  README.md  Suggestions.md  example.ipynb  introduction.md  new.txt  pyproject.toml  readme.md  requirements-cu126-dev.txt  requirements-cu126.txt  requirements-cu128-dev.txt  requirements-cu128.txt  requirements-dev.txt  requirements.txt  setup.py  test node  test_all.py  uv_migration_readme.md  wiqa_sampling_loss.out
.semaphore/: semaphore.yml
20news/: .gitignore  dataset-base-two-level-k-fold.ipynb  dataset-base-two-level.ipynb  dataset-base.ipynb  dataset.ipynb  graph.py  graph_2level.py  logger.json  logger2_base.json  logger2_manual_base.txt  logger_manual.txt  main.py  main_base.py  main_base_2level.py  main_base_2level_ilpvar.py  reader.py  reader_base.py  reader_base_2level.py
ACE05/: check.py  dummy.py  main.py  model.py  model_prototype.py  models.py  requirements.txt  statistics.py
AnimalAndFlower/: graph.py  graph_multiclass.py  main.py  main_fixed_resnet.py  main_shared_resnet.py  main_shared_resnet_multiclass.py  main_shared_resnet_multiclass_pytorch.py  model.py  model_fixed_resnet.py  model_shared_resnet.py  model_shared_resnet_multiclass.py  readme.md
BIO Tagging (Movie Review)/: graph.py  main.py  main_pytorch.py  model.py  readme.md
CIFAR10/: .gitignore  CIFAR10.owl  graph.py  graph_bin_hierarchical.py  graph_binomial.py  graph_multi.py  graph_multi_binomial.py  graph_ont.py  graph_submulti.py  main.py  main_GBI.py  main_ILP.py  main_ILP_new.py  main_ILP_new_cnn_bin_hierarchical.py  main_ILP_ont.py  main_IML.py  main_IML_new.py  main_PD.py  main_PD_new.py  main_iml_1.py  main_multi.py  main_multi_binomial.py  main_submulti.py  main_test.py
CIFAR100/: .gitignore  graph.py  graph_exactL_ifLorLbothways.py  graph_exactL_ifLorLbottomup.py  graph_exactL_ifLorLtopdown.py  graph_exactL_nandL.py  graph_only_exactL.py  main.py  pytorch_main.py
DNA_sequence/: graph.py  main.py  reader.py  readme.md  sequences.txt
Email_Spam/: graph.py  main.py  readme.md
EventToEventRelation/: doc_reader.py  graph.py  main.py  program_declaration.py  readme.md  requirements.txt
FakeNews/: graph.py  model.py
Getting Started/: Profiling.md  evaluation.md  inference.md  knowledge_declaration.md  model_declaration.md  training_and_testing.md  training_paradigms.md
IMDB/: download_data.sh  graph.py  requirements.txt
ImgHierarchy/: .gitignore  graph.py  hierarchy_flat.json  logger.json  logger_all.txt  logger_comp.json  logger_jp.json  logger_manual.txt  logger_manual_adjustment and entropy.txt  logger_manual_comp.txt  logger_manual_entropy_mean.txt  logger_manual_jp.txt  logger_manual_mean.txt  logger_manual_mean_std.txt  logger_manual_signed_difference.txt  logger_manual_softmax.txt  logger_manual_std.txt  logger_manual_total.txt  main.py  process_result.ipynb  reader.py
MNIST_binary/: .gitignore  accuracy_calculator.py  graph.py  main.py  model.py  pytorch_main.py  reader.py
Main Components/: Inference (ILP).md  Inference.md  Knowledge Declaration (Graph).md  Model Declaration (Sensor).md  Query and Access (Datanode).md  The Source of Constraints.md  Workflow (Training).md  readme.md
ModularPropara/: config.py  graph.py  graph_multi.py  main-multi.py  main.ipynb  main.py  reader.py
NLI/: check_graph.py  check_result.py  graph.py  graph_new_syntax.py  main_group_sentences.py  model.py  new_graph.py  program_declaration.py  utils.py
New/: GettingStarted.md
POS_tagging/: main.py  models.py  utils.py
Propara/: Propara-Complete.ipynb  Propara.ipynb  ProparaILP.py  ProparaLearning.py  Proparamain.py  graph.py  graph_train.py  main.py  main_train.py  reader.py  reader_train.py  roberta.py  updated_test_data.json
Ruletaker/: main.py  reader.py
Run With Jupyter/: BeliefBank.ipynb  IMDB.ipynb  readme.md
SentimentAnalysis/: Test.ipynb  datanode_torch_test.py  tweetGraph.py  tweet_reader.py
SpatialQARules/: .gitignore  comparing_result.py  graph.py  graph_spartun_rel.py  graph_stepgame.py  main.py  main_rel.py  models.py  program_declaration.py  reader.py
SpatialWithT5/: graph.py  main.py  models.py  program_declaration.py  reader.py  readme.md  requirements.txt  utils.py
T5Procedural/: .gitignore  download.py  download.sh  download_simple.py  graph_multi.py  graph_multi_simple.py  main-multi.py  main_multi_simple.py  reader.py  reader_simple.py
Technical API/: ExampleTask.md  GettingStarted.md  domiknows.compiler.md  domiknows.data.allennlp.md  domiknows.data.md  domiknows.graph.allennlp.md  domiknows.graph.md  domiknows.md  domiknows.program.md  domiknows.program.model.md  domiknows.sensor.allennlp.md  domiknows.sensor.md  domiknows.sensor.pytorch.md  domiknows.sensor.pytorch.tokenizers.md  domiknows.sensor.torch.md  domiknows.solver.constructor.md  domiknows.solver.md  domiknows.solver.session.md  index.md  modules.md  readme.md
Tutorial Examples/: BeliefBank.ipynb  Conll.ipynb  DomiKnows_EmailSpam.ipynb  GraphColoring.ipynb  POS_tagging.ipynb  readme.md
Typenet/: TypenetGraph.py  TypenetRun.py  config.py  depth_classes.json  typenet.owl
User API/: Datasets and Their Results.md  Example Task.md  ExampleTask.md  Introduction.md  Walkthrough Example.md  Walkthrought Example.md  readme.md
VQA/: .gitignore  README.md  adj_matrix.pt  concepts.json  graph.py  hierarchy.json  main.py  model.py  nn_api.py  reader.py  readme.md  run.py  sg_data_loader.py  sg_data_loader_extra.py  (+4 more)
(+2130 files in other folders)
