[project]
name = "domiknows"
version = "1.0.0"
description = "A library provides integration between Domain Knowledge and Deep Learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "acls==1.0.2",
    "dnspython>=2.8.0",
    "graphviz>=0.21",
    "gurobipy>=12.0.3",
    "huggingface-hub>=0.35.0",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "ordered-set>=4.1.0",
    "owlready2>=0.48",
    "pandas>=2.3.2",
    "py7zr>=1.0.0",
    "pycocotools>=2.0.10",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "click>=8.1.0",
    "spacy>=3.8.0",
    "tokenizers>=0.22.0",
    "transformers>=4.56.1",
    "colorama"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pip-tools>=4.12.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "flaky>=3.8.0",
    "black[jupyter]>=24.10.0",
    "isort>=5.12.0",
    "mypy>=1.3.0"
]

cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch==2.8.*",
  "torchvision==0.23.*",
]
cu126 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
xpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-xpu",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu126" },
        { extra = "xpu" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" },
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["domiknows*"]
